# pavement

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo.ipynb  singers.csv
src/pavement/: __init__.py
tests/: test_pavement.py
